--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -35,3 +35,18 @@ h1, h2, h3, h4, h5, h6 {
     background: #FFFFFF;
     box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25); 
   }
+.product-details{
+  padding: 50px 60px 90px 60px;
+}  
+
+.product-details-link{
+  display: flex;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.icon-goback{
+  border: 2px solid #407BFF;
+transform: rotate(-180deg);
+margin-right: 30px;
+}
