Create auth module

--- a/front-web/src/app.scss
+++ b/front-web/src/app.scss
@@ -47,6 +47,24 @@ h1, h2, h3, h4, h5, h6 {
 
 .icon-goback{
   border: 2px solid #407BFF;
-transform: rotate(-180deg);
-margin-right: 30px;
+  transform: rotate(-180deg);
+  margin-right: 30px;
+}
+
+.margin-bottom-30{
+  margin-bottom: 30px;
+}
+
+.input-base{
+  border: 1px solid #E1E1E1;
+  box-sizing: border-box;
+  border-radius: 10px;
+  font-size: 18px;
+  line-height: 25px;
+  letter-spacing: -0.015em;
+  color:#263238;
+  height: 50px;
+  &::placeholder{
+    color: #9E9E9E;
+  }
 }
